# GMOS-LIA

./: README.rst  __main__.py  activate.bat  devices.json  devices1.json  pyproject.toml  requirements.txt  setup.json  setup_3T.json  tasks.py
src/GMOS_LIA/: LIASetup.py  LabDevices.py  ResultPlotter.py  entry_points.py
test/: conftest.py  mock_devices.py  test_lia_setup.py
